<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_members_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/add_members_bottom_sheet_layout_v_top_pin"
        android:layout_width="@dimen/_128dp"
        android:layout_height="@dimen/_5dp"
        android:layout_marginVertical="@dimen/_16dp"
        android:background="@drawable/bottom_sheet_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_members_bottom_sheet_layout_tv_done"
        style="@style/textViewWith12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/_16dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="@id/add_members_bottom_sheet_layout_v_top_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_members_bottom_sheet_layout_v_top_pin"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/add_members_bottom_sheet_layout_tv_you_can_add_upto_6_members"
        style="@style/textViewWith12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/you_can_add_upto_6_members"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_members_bottom_sheet_layout_v_top_pin"/>

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/add_members_bottom_sheet_layout_csv"
        android:layout_width="400dp"
        android:layout_height="300dp"
        app:autoFocusButtonVisible="false"
        app:flashButtonColor="?colorAccent"
        app:frameColor="?colorAccent"
        android:layout_marginTop="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/add_members_bottom_sheet_layout_tv_you_can_add_upto_6_members"
        app:barrierMargin="@dimen/_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:frameCornersRadius="@dimen/_32dp"
        app:frameCornersSize="50dp"
        app:frameSize="0.4"
        app:frameThickness="1dp"
        app:maskVisible="true" />
    <TextView
        android:id="@+id/add_members_bottom_sheet_layout_tv_added_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/added_members"
        android:layout_marginTop="@dimen/_16dp"
        style="@style/textViewWith12dp"
        android:layout_marginStart="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/add_members_bottom_sheet_layout_csv"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_members_bottom_sheet_layout_rv_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_4dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_members_bottom_sheet_layout_tv_added_members"
        app:spanCount="2"
        tools:listitem="@layout/member_card_item" />
</androidx.constraintlayout.widget.ConstraintLayout>